make page title and favicon right

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
-    <title>takbelit</title>
+    <link rel="icon" type="image/png" href="src/assets/Logo_Green.png">
+    <title>vandar</title>
   </head>
   <body dir="rtl">
     <div id="app"></div>
